# kde-arch-update-plasmoid

./: .gitignore  CMakeLists.txt  README.md  install_plasmoid.sh  notes.txt  uninstall_plasmoid.sh
package/: metadata.desktop  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: CompactRepresentation.qml  ConfigGeneral.qml  FullRepresentation.qml  main.qml
pkg/: PKGBUILD
plugin/: CMakeLists.txt  archupdateplugin.cpp  archupdateplugin.h  main.cpp  plasmoidplugin.cpp  plasmoidplugin.h  systemCalls.cpp  systemCalls.h  worker.cpp  worker.h
